added asset and transaction routes and controller

--- a/package.json
+++ b/package.json
@@ -11,15 +11,17 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
-    "@prisma/client": "^6.5.0",
+    "@prisma/client": "latest",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-rate-limit": "^7.5.0",
     "express-validator": "^7.2.1",
+    "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.10.0",
-    "prisma": "^6.5.0"
+    "nodemon": "^3.1.9",
+    "prisma": "latest"
   }
 }
